--- a/base.css
+++ b/base.css
@@ -37,6 +37,14 @@ button:hover {
     cursor: pointer;
 }
 
+a {
+    color: rgb(86, 72, 86);
+}
+
+a:hover {
+    color: rgb(48, 40, 48);
+}
+
 .navigation {
     display: flex;
     justify-content: space-between;
@@ -63,7 +71,7 @@ button:hover {
     display: grid;
     place-items: center;
     margin-bottom: 3rem;
-    padding: 0 10rem;
+    padding: 0 8rem;
 }
 
 .center-text {
@@ -120,6 +128,10 @@ button:hover {
     .navigation {
         flex-direction: column;
         gap: 1rem;
+    }
+
+    .heading {
+        padding: 0 4rem;
     }
     
     .grid {
