--- a/base.css
+++ b/base.css
@@ -60,11 +60,16 @@ a:hover {
 }
 
 .icon {
-    height: 48px;
     width: 48px;
-    border-radius: 16px;
-    background-color: rgb(86, 72, 86);
+    height: 48px;
     box-shadow: 2px 2px 29px 17px rgba(0,0,0,0.10);
+    background-color: rgb(86, 72, 86);
+    border-radius: 16px;
+}
+
+.png {
+    width: 48px;
+    height: 48px;
 }
 
 .heading {
@@ -96,6 +101,7 @@ a:hover {
 
 .card:hover {
     box-shadow: 2px 2px 40px 24px rgba(0,0,0,0.35);
+    cursor: pointer;
 }
 
 .preview {
