--- a/base.css
+++ b/base.css
@@ -8,7 +8,7 @@ h1, h2, h3, h4, h5 {
     font-family: 'M PLUS Rounded 1c', sans-serif;
     font-weight: 900;
     letter-spacing: -.05rem;
-    color: rgb(86, 72, 86);
+    color: rgb(123, 54, 123);
 }
 
 p {
@@ -19,7 +19,7 @@ p {
 }
 
 button {
-    background-color: rgb(86, 72, 86);
+    background-color: rgb(123, 54, 123);
     color: white;
     border-radius: 16px;
     font-size: 16px;
@@ -27,22 +27,22 @@ button {
     font-weight: 900;
     padding: 1rem 2rem;
     border: none;
-    box-shadow: 2px 2px 20px 12px rgba(0,0,0,0.20);
+    box-shadow: 2px 2px 20px 12px rgba(103, 37, 103, 0.2);
     transition: 0.3s ease-in-out;
 }
 
 button:hover {
-    background-color: rgb(48, 40, 48);
-    box-shadow: 2px 2px 40px 24px rgba(0,0,0,0.35);
+    background-color: rgb(84, 30, 84);
+    box-shadow: 2px 2px 40px 24px rgba(103,37,103,0.4);
     cursor: pointer;
 }
 
 a {
-    color: rgb(86, 72, 86);
+    color: rgb(123, 54, 123);
 }
 
 a:hover {
-    color: rgb(48, 40, 48);
+    color: rgb(84, 30, 84);
 }
 
 .navigation {
@@ -62,8 +62,8 @@ a:hover {
 .icon {
     width: 48px;
     height: 48px;
-    box-shadow: 2px 2px 29px 17px rgba(0,0,0,0.10);
-    background-color: rgb(86, 72, 86);
+    box-shadow: 2px 2px 16px 8px rgba(103, 37, 103, 0.15);
+    background-color: rgb(123, 54, 123);
     border-radius: 16px;
 }
 
@@ -95,12 +95,12 @@ a:hover {
     background-color: rgb(86, 72, 86);
     border-radius: 24px;
     overflow: hidden;
-    box-shadow: 2px 2px 20px 12px rgba(0,0,0,0.20);
+    box-shadow: 2px 2px 20px 12px rgba(103, 37, 103, 0.2);
     transition: box-shadow 0.3s ease-in-out;
 }
 
 .card:hover {
-    box-shadow: 2px 2px 40px 24px rgba(0,0,0,0.35);
+    box-shadow: 2px 2px 40px 24px rgba(103,37,103,0.4);
     cursor: pointer;
 }
 
@@ -128,6 +128,14 @@ a:hover {
 .link-out {
     padding: 1rem 0;
     cursor: pointer;
+}
+
+.teaser {
+    display: flex;
+    height: 100%;
+    padding: 2rem;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 @media only screen and (max-width: 600px) {
