--- a/base.css
+++ b/base.css
@@ -19,7 +19,15 @@ p {
     font-weight: 900;
 }
 
-button {
+a {
+    color: rgb(123, 54, 123);
+}
+
+a:hover {
+    color: rgb(84, 30, 84);
+}
+
+.primary-button {
     background-color: rgb(123, 54, 123);
     color: white;
     border-radius: 16px;
@@ -32,18 +40,41 @@ button {
     transition: 0.3s ease-in-out;
 }
 
-button:hover {
+.primary-button:hover {
     background-color: rgb(84, 30, 84);
     box-shadow: 2px 2px 40px 24px rgba(103,37,103,0.4);
     cursor: pointer;
 }
 
-a {
-    color: rgb(123, 54, 123);
+.gradient-border {
+    border-radius: 16px;
+    padding: 1rem;
+    border: none;
+    background: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);
+    font-size: 16px;
+    font-family: 'M PLUS Rounded 1c', sans-serif;
+    font-weight: 900;
+    box-shadow: inset 0 0 0 4px rgb(123, 54, 123), 2px 2px 20px 12px rgba(103, 37, 103, 0.2);
+    transition: .2s ease-in-out;
+    animation: animatedgradient 3s ease alternate infinite;
+    background-size: 500% 500%;
+  }
+  
+@keyframes animatedgradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
 
-a:hover {
-    color: rgb(84, 30, 84);
+.gradient-border:hover {
+    cursor: help;
+    box-shadow: inset 0 0 0 4px white, 2px 2px 40px 24px rgba(103,37,103,0.4);
 }
 
 .card-link {
@@ -75,6 +106,11 @@ a:hover {
 .png {
     width: 48px;
     height: 48px;
+}
+
+.header-buttons {
+    display: flex;
+    gap: 8px;
 }
 
 .heading {
@@ -150,7 +186,7 @@ a:hover {
     }
 
     .heading {
-        padding: 0 4rem;
+        padding: 0 2rem;
     }
     
     .grid {
