boilerplate html stuff

--- a/base.css
+++ b/base.css
@@ -179,7 +179,7 @@ a:hover {
     justify-content: flex-start;
 }
 
-@media only screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
     .navigation {
         flex-direction: column;
         gap: 1rem;
