--- a/base.css
+++ b/base.css
@@ -44,6 +44,7 @@ a:hover {
     background-color: rgb(84, 30, 84);
     box-shadow: 2px 2px 40px 24px rgba(103,37,103,0.4);
     cursor: pointer;
+    transform: scale(1.05);
 }
 
 .gradient-border {
@@ -54,7 +55,7 @@ a:hover {
     font-size: 16px;
     font-family: 'M PLUS Rounded 1c', sans-serif;
     font-weight: 900;
-    box-shadow: inset 0 0 0 4px rgb(123, 54, 123), 2px 2px 20px 12px rgba(103, 37, 103, 0.2);
+    box-shadow: 2px 2px 20px 12px rgba(103, 37, 103, 0.2);
     transition: .2s ease-in-out;
     animation: animatedgradient 3s ease alternate infinite;
     background-size: 500% 500%;
@@ -74,7 +75,8 @@ a:hover {
 
 .gradient-border:hover {
     cursor: help;
-    box-shadow: inset 0 0 0 4px white, 2px 2px 40px 24px rgba(103,37,103,0.4);
+    box-shadow: 2px 2px 40px 24px rgba(103,37,103,0.4);
+    transform: scale(1.1);
 }
 
 .card-link {
@@ -137,12 +139,14 @@ a:hover {
     border-radius: 24px;
     overflow: hidden;
     box-shadow: 2px 2px 20px 12px rgba(103, 37, 103, 0.2);
-    transition: box-shadow 0.2s ease-in-out;
+    transition: 0.2s ease-in-out;
+    will-change: transform;
 }
 
 .card:hover {
     box-shadow: 2px 2px 40px 24px rgba(103,37,103,0.4);
     cursor: pointer;
+    transform: scale(1.025);
 }
 
 .preview {
@@ -185,8 +189,12 @@ a:hover {
         gap: 1rem;
     }
 
+    .gradient-border {
+        display: none;
+    }
+
     .heading {
-        padding: 0 2rem;
+        padding: 0 1rem;
     }
     
     .grid {
